v2.0/deploying/_index.md
---
lastmod: 2020-03-27
old_version: true
date: 2017-01-21
linktitle: Best practices
menu:
  community_v2.0:
    parent: "110 Deployment and Go-Live"
title: Production best practices
weight: 1
---
Setting up Velonetics is a straightforward process, but here are some not-so-obvious recommendations to get a good start when going live. This section has generalistic advice, despite that every Velonetics installation is is different. Let's dip the toe into the deployment waters!

## Architecture recommendations
### High Availability
Hardware can fail at any time, and a Gateway is a piece critical enough to have redundancy of the service. Having a cluster of machines operating the service assures high availability. You should always plan to have at least a couple of Velonetics servers/containers running in case one of them gets in trouble, even when you have low traffic.

Velonetics can run in different regions and datacenters transparently without any problem as its nodes do not need to communicate to each other.

[Setup a cluster of machines](/docs/v2.0/deploying/clustering/)

### Place a balancer in front of Velonetics
Put a load balancer in front of Velonetics to distribute traffic between the different nodes of the cluster (Kubernetes already does this for you). Use always at least two Velonetics instances for High Availability.

### Server dimensioning
Dimension Velonetics nodes according to your expected needs and throughput.

See [server requirements](/docs/v2.0/deploying/server-dimensioning/)

### Use several gateways
The API gateway doesn't need to be unique. We recommend using an independent Velonetics installation per consumer type. For instance, your iOS development team might need its own Velonetics with different views of the consumed content compared to the Web Team. Needs and content in each team differs in each endpoint, and every team could optimize the contract for each case.

### Use HTTP2
Whenever possible, enable HTTP2 between your balancer and Velonetics API gateway for the best performance. There is nothing additional you need to configure in Velonetics.

### SSL Certificates
Even that you can start Velonetics with SSL, you can add your public SSL certificate in the load balancer or PaaS and use **internal certificates**, or even no certificates at all (termination), between the load balancer and Velonetics.

### Prepare for failure
Add a [circuit breaker](/docs/v2.0/backends/circuit-breaker/) to your backends to avoid Velonetics keep pushing a failing system and throttle down for a while. If you know that a certain backend does not support more than a number of requests, add a maximum number of requests using the [proxy rate limit](/docs/v2.0/backends/rate-limit/).

## Monitoring
### Enable traces and metrics
Make sure you have visibility of what is going on. Choose any of the systems where you can send the metrics and enable them. There are many choices, but choose wisely and do not enable them all!. If you don't use a SaaS provider, **a good self-hosted start** would be:

- A [Grafana Dashboard](/docs/v2.0/telemetry/grafana/)
- Fueled by [InfluxDB](/docs/v2.0/telemetry/influxdb/)
- And full traces by [Jaeger](/docs/v2.0/telemetry/jaeger/)

Pay attention to the cardinality of the metrics. Logs and metrics might produce a lot of data and CPU activity. Aggregate and consolidate data in InfluxDB (e.g: When looking at the past year metrics, you don't need minute resolution and days will be enough).

### Add logging
If you don't add any logging, Velonetics will spit on stdout all the activity of the gateway. This behavior is not recommended for production. Enable the [logging](/docs/v2.0/logging/) with `CRITICAL`, `ERROR` or `WARNING` levels at most. Avoid `INFO` and `DEBUG` levels in production at all times. This is the **recommended configuration** in production for a good performance:

{{< highlight json >}}
{
  "version": 3,
  "extra_config": {
    "telemetry/logging": {
      "level": "CRITICAL",
      "syslog": false,
      "stdout": false
    }
  }
}
{{< /highlight >}}


Send logs to an [ELK](/docs/v2.0/logging/logstash/), the [syslog](/docs/v2.0/logging/#write-to-syslog-or-stdout), or a [GELF server](/docs/v2.0/logging/graylog-gelf/).

{{< note title="Redirect ouput to /dev/null for maximum performance" type="tip" >}}
**When the output of Velonetics stdout is not important to you**, set the logging level to `CRITICAL` and redirect its output to `/dev/null` to have even more performance. To do that, start Velonetics with:

    velonetics run -c velonetics.json >/dev/null 2>&1
{{< /note >}}


## Deployment recommendations

### Release through a CI/CD pipeline
Automate the go-live process through a [CI/CD pipeline](/docs/v2.0/deploying/ci-cd/) that builds and checks Velonetics configuration before deploying.

### Use Docker and immutable containers
On Docker deployments, creating an immutable Docker image with your desired configuration takes a few seconds in your CI/CD pipeline. Create a `Dockerfile` with at least the following code and deploy the resulting image in production:

{{< highlight Dockerfile >}}
FROM {{< product image >}}:v2.0
COPY velonetics.json /etc/velonetics/velonetics.json
{{< /highlight >}}

Read more on [Docker artifacts](/docs/v2.0/deploying/docker/)

### Use blue/green or similar deployment strategy
As it happens with Apache, Nginx, Varnish and other stateless services, changing the configuration requires a restart. When deploying new changes, use a technique like blue/green deployment or similar to make the deploy transparent for the user.

This scenario can be automated and is available in Kubernetes and in all major cloud providers. The idea is that you spin up new machines with the latest configuration and then shift the traffic from the old instances to the new ones.

This methodology ensures that there is no downtime when applying changes. On-premises installations can make a similar approach as well, but the implementations depends on the underlying infrastructure.

## Code organization
### Name your configurations
Add a `name` key in the configuration file with useful information so you can identify which specific version your cluster is running. Whatever type of information you write inside the `name` is open to your imagination. Any value you write is **available in the metrics** for inspection.

{{< highlight json >}}
{
    "version": 3,
    "name": "Production Cluster rev-db6a182"
}
{{< /highlight >}}


**During the build in the pipeline**, it might be a good idea to **replace the content** of the `name` attribute by a content showing the deployed version (the short SHA from the commit maybe).

### Add comments and metadata  (`@`)
During startup, Velonetics **ignores from the configuration anything that it doesn't recognize**. Meaning that your `velonetics.json` (or whatever format you use) allows you to include additional metadata and fields that make sense to your company. Use it to add your meta language, tags, comments, bot integrations, etc. for better integration with your CI/CD system, deployment process, or just better comprehension of the file in the future.

{{< note title="Validating Velonetics's schema" type="tip" >}}
If you use the Velonetics `$schema` to validate your configuration, unknown attributes will trigger a warning during validation. To add your own configurations schema-compatible, and have them ignored by Velonetics, prefix them with one of the following characters: `@`, `$`, `_` or `#`.
{{< /note >}}

For instance, you could add `@comment` fields. The field is not used by Velonetics and it passes the JSON schema validation. Finding it might be fresh air for the developer next to you.


{{< highlight json "hl_lines=4" >}}
{
    "endpoint": "/cookies",
    "input_headers": ["Cookie" ],
    "@comment": "At this early stage of the implementation, we still need to send cookies to the backend.",
    "backend": [{
        "url_pattern": "/srv/legacy"
    }]
}
{{< /highlight >}}

### Split the configuration in multiple repos or folders
On large organizations with several teams using a common gateway, you might want to split the endpoints in groups using folders or even different repositories. With the [flexible configuration](/docs/v2.0/configuration/flexible-config/) you can have teams working in its dedicated space and aggregate all endpoints during build time without conflicts touching the same files.

Most Velonetics configurations tend to be large and with repetitive blocks. Define a basic skeleton of configurations that will be used across all teams.
